# A2A-plus-MCP

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
a2a_servers/: run_from_local_client.py  stock_report_expert.py
a2a_servers/agent_servers/: gsearch_report_agent_server.py  host_agent_server.py  stock_report_agent_server.py  utils.py
a2a_servers/agents/: adk_agent.py
a2a_servers/agents/utils/: remote_agent_connection.py
a2a_servers/common/: agent_task_manager.py
a2a_servers/common/client/: card_resolver.py  client.py
a2a_servers/common/server/: server.py  task_manager.py  utils.py
a2a_servers/hosts/cli/: __main__.py  push_notification_listener.py  pyproject.toml
adk_agents_testing/: hierarchical_agents.py  single_agent_search_mcp.py
adk_agents_testing/mcp_tools/: mcp_tool_search.py  mcp_tool_stocks.py
mcp_server/sse/: search_server.py  stocks_server.py
services/search_engine_service/: serper_dev_service.py
services/stocks_service/: finhub_service.py  yahoo_fin_stock.py
tests/: test_all_layers.py  test_integration.py  test_pipeline.py
